--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "ejs": "^2.5.1",
     "express": "^4.14.0",
     "gm": "^1.22.0",
+    "google-images": "^1.0.0",
     "susy": "^2.2.12"
   },
   "devDependencies": {
