--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "morgan": "^1.7.0"
   }
 }
