Created a shouts controller with post and get routes, refactored preview controller callbacks, integrated mongoose into the new route, added a shout model to the folder structure, improved error handling, added a button in index.html and a handler for it in creating.js, changed memify function to accurately crop and resize files to fit the shout dimentions, extracted database config into a separate file

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "gm": "^1.22.0",
-    "google-images": "^1.0.0"
+    "google-images": "^1.0.0",
+    "mongoose": "^4.5.8"
   },
   "devDependencies": {
     "browser-sync": "^2.13.0",
