--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "gm": "^1.22.0",
