--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.14.0",
     "gm": "^1.22.0",
     "google-images": "^1.0.0",
-    "mongoose": "^4.5.8"
+    "mongoose": "^4.5.8",
+    "request": "^2.74.0"
   },
   "devDependencies": {
     "browser-sync": "^2.13.0",
